chore: hystrix 관련 세팅
hystrix.command.{commandKey}.{설정해야 할 정보} 식으로 이루어져 있다

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -22,6 +22,10 @@ mybatis.mapper-locations=classpath:sql/*.xml
 # Customer API
 customer.api.url=http://localhost:8076/ecommerce/customer
 
+# hystrix setting
+hystrix.command.default.execution.isolation.thread.timeoutInMiliseconds=2000
+hystrix.command.retrieveCustomer.execution.isolation.thread.timeoutInMiliseconds=5000
+
 # Env
 POSTGRES=localhost
 
