--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,14 @@ subprojects { // 전체 서브 모듈에 대한 설정
 
 		// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
 		implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.8.RELEASE'
-
+		
+		// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix
+		implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
 
 		// test
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
 
 	}
 
