chore: feign client에 histrix를 사용하기 위해 추가

--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -14,6 +14,10 @@ spring.datasource.schema=classpath:sql/ECOMMERCE_CUSTOMER_DDL.sql
 spring.datasource.data=classpath:sql/ECOMMERCE_CUSTOMER_DML.sql
 spring.datasource.initialization-mode=always
 
+
+# feign-client condition to use hystrix
+feign.hystrix.enabled=true
+
 # MyBatis
 mybatis.type-aliases-package=com.ecommerce.customer.domain.entity
 mybatis.mapper-locations=classpath:sql/*.xml
