--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,9 @@ subprojects { // 전체 서브 모듈에 대한 설정
 		// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix
 		implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.8.RELEASE'
 
+		// https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-ribbon
+		implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-ribbon', version: '2.2.8.RELEASE'
+
 		// test
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
