chore: ribbon client 설정

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -20,12 +20,18 @@ mybatis.type-aliases-package=com.ecommerce.order.domain.entity
 mybatis.mapper-locations=classpath:sql/*.xml
 
 # Customer API
-customer.api.url=http://localhost:8076/ecommerce/customer
+customer.api.url=http://ecommerce-customer/ecommerce/customer
 
 # hystrix setting
-hystrix.command.default.execution.isolation.thread.timeoutInMiliseconds=2000
+hystrix.command.default.execution.isolation.thread.timeoutInMiliseconds=5000
 hystrix.command.retrieveCustomer.execution.isolation.thread.timeoutInMiliseconds=5000
 
+# ribbon setting
+ecommerce-customer.ribbon.listOfServers=localhost:8076, localhost:9076 
+
+# my custom ribbon client setting
+ecommerce-customer-custom.ribbon.MaxAutoRetries=1
+ecommerce-customer-custom.ribbon.listOfServers=localhost:8076, localhost:9076
 # Env
 POSTGRES=localhost
 
