chore: 유레카 클라이언트 환경 설정

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -22,12 +22,19 @@ mybatis.mapper-locations=classpath:sql/*.xml
 # Customer API
 customer.api.url=http://ecommerce-customer/ecommerce/customer
 
+# eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+
 # hystrix setting
 hystrix.command.default.execution.isolation.thread.timeoutInMiliseconds=5000
 hystrix.command.retrieveCustomer.execution.isolation.thread.timeoutInMiliseconds=5000
 
 # ribbon setting
-ecommerce-customer.ribbon.listOfServers=localhost:8076, localhost:9076 
+#ecommerce-customer.ribbon.listOfServers=localhost:8076, localhost:9076
+#ecommerce-customer.ribbon.eureka.enabled=true
 
 # my custom ribbon client setting
 ecommerce-customer-custom.ribbon.MaxAutoRetries=1
