--- a/catalogs/src/main/resources/application.properties
+++ b/catalogs/src/main/resources/application.properties
@@ -20,6 +20,13 @@ mybatis.type-aliases-package=com.ecommerce.catalogs.domain.entity
 mybatis.mapper-locations=classpath:sql/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
+
+# eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
+
 # Env
 POSTGRES=localhost
 
