--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -14,6 +14,11 @@ spring.datasource.schema=classpath:sql/ECOMMERCE_CUSTOMER_DDL.sql
 spring.datasource.data=classpath:sql/ECOMMERCE_CUSTOMER_DML.sql
 spring.datasource.initialization-mode=always
 
+# eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.instance.prefer-ip-address=true
 
 # feign-client condition to use hystrix
 feign.hystrix.enabled=true
