build: Kafka 의존성 추가

--- a/order/build.gradle
+++ b/order/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-client', version: '2.2.8.RELEASE'
 
+    // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
+    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '2.7.3'
+
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
